Closed
Bug 1910516
Opened 2 months ago
Closed 2 months ago
Crash in [@ operator!=]
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
130 Branch
Tracking | Status | |
---|---|---|
firefox-esr115 | --- | unaffected |
firefox-esr128 | --- | unaffected |
firefox128 | --- | unaffected |
firefox129 | --- | unaffected |
firefox130 | --- | fixed |
People
(Reporter: release-mgmt-account-bot, Assigned: jnicol)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
Crash report: https://crash-stats.mozilla.org/report/index/7ac2576c-4de8-4736-9ad0-a77e40240725
Reason: EXCEPTION_ACCESS_VIOLATION_READ
Top 10 frames of crashing thread:
0 xul.dll operator!= mfbt/RefPtr.h:565
0 xul.dll mozilla::ClientWebGLContext::GetTexTypeForSwapChain const dom/canvas/ClientWebGLContext.cpp:471
1 xul.dll mozilla::ClientWebGLContext::Present dom/canvas/ClientWebGLContext.cpp:478
1 xul.dll mozilla::ClientWebGLContext::OnBeforePaintTransaction dom/canvas/ClientWebGLContext.cpp:459
2 xul.dll mozilla::layers::ShareableCanvasRenderer::UpdateCompositableClient gfx/layers/ShareableCanvasRenderer.cpp:182
3 xul.dll mozilla::layers::WebRenderCanvasRendererAsync::UpdateCompositableClientForEmptyTransaction gfx/layers/wr/WebRenderCanvasRenderer.cpp:81
3 xul.dll mozilla::layers::WebRenderCommandBuilder::EmptyTransaction gfx/layers/wr/WebRenderCommandBuilder.cpp:1743
3 xul.dll mozilla::layers::WebRenderLayerManager::EndEmptyTransaction gfx/layers/wr/WebRenderLayerManager.cpp:282
4 xul.dll mozilla::PresShell::PaintInternal layout/base/PresShell.cpp:6455
5 xul.dll mozilla::PresShell::PaintAndRequestComposite layout/base/PresShell.cpp:6355
By querying Nightly crashes reported within the last 2 months, here are some insights about the signature:
- First crash report: 2024-07-25
- Process type: Content
- Is startup crash: No
- Has user comments: No
- Is null crash: Yes - all crashes happened on null or near null memory address
By analyzing the backtrace, the regression may have been introduced by a patch to fix Bug 1898238.
:jnicol, since you are the author of the potential regressor, could you please take a look?
Flags: needinfo?(jnicol)
Reporter | ||
Comment 1•2 months ago
|
||
Set release status flags based on info from the regressing bug 1898238
status-firefox-esr115:
--- → unaffected
Assignee | ||
Comment 2•2 months ago
|
||
Updated•2 months ago
|
Assignee: nobody → jnicol
Status: NEW → ASSIGNED
Assignee | ||
Updated•2 months ago
|
Flags: needinfo?(jnicol)
Pushed by jnicol@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/ff2d24637ef5
Treat webgl context as in-process when determining texture type if context is lost. r=jgilbert
Comment 4•2 months ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 2 months ago
Resolution: --- → FIXED
Target Milestone: --- → 130 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•