Bug 1910516 - Treat webgl context as in-process when determining texture type if context is lost. r=jgilbert

Differential Revision: https://phabricator.services.mozilla.com/D218047