dom/canvas/ClientWebGLContext.cpp
@@ -468,8 +468,8 @@ void ClientWebGLContext::EndComposition() {
 layers::TextureType ClientWebGLContext::GetTexTypeForSwapChain() const {
   const RefPtr<layers::ImageBridgeChild> imageBridge =
       layers::ImageBridgeChild::GetSingleton();
-  return layers::TexTypeForWebgl(imageBridge,
-                                 mNotLost->outOfProcess != nullptr);
+  const bool isOutOfProcess = mNotLost && mNotLost->outOfProcess != nullptr;
+  return layers::TexTypeForWebgl(imageBridge, isOutOfProcess);
 }
 
 void ClientWebGLContext::Present(WebGLFramebufferJS* const xrFb,
